<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:columnCount="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/build_number_label" />

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/default_zero" android:id="@+id/about_build_number"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginRight="8dp" style="?android:attr/textAppearanceLarge"
            android:text="@string/header_changelog"  android:layout_columnSpan="2" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/changelog" android:layout_marginTop="8dp"
                  android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginRight="8dp" style="?android:attr/textAppearanceLarge"
            android:text="@string/header_about"  android:layout_columnSpan="2" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_columnSpan="2" android:layout_marginTop="8dp" />
    </GridLayout>
</ScrollView>