<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <TextView android:text="@string/tyre_size_stock"
                  android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:id="@+id/compare_tyre_width"
                  android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"/>
        <TextView android:text="@string/tyre_size_width_delim"
                  android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:id="@+id/compare_profile"
                  android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"/>
        <TextView android:text="@string/tyre_size_radial_delim"
                  android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:id="@+id/compare_alloy_diameter"
                  android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"/>
        <TextView android:text="@string/tyre_size_max_dev"
                  android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:id="@+id/max_deviation"
                  android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="numberDecimal"/>
        <TextView android:text="@string/tyre_size_percent" android:textSize="18sp"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <Button  android:adjustViewBounds="true" android:id="@+id/compare_refresh"
                 android:background="@drawable/ic_menu_refresh"
            android:layout_width="32sp" android:layout_height="32sp"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/tyre_disclaimer"/>
        <Button android:id="@+id/disclaimer_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/got_it"/>
    </LinearLayout>
    <ExpandableListView android:id="@+id/tyre_size_tree"
                        android:layout_height="match_parent" android:layout_width="match_parent"/>
</LinearLayout>