<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal" >
    <EditText
        android:id="@+id/metric" android:text="@string/default_zero" android:textSize="14sp"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/metric_unit" android:text="@string/unit_lphkm"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:gravity="center" android:focusable="false"/>
    <EditText
        android:id="@+id/imperial_uk" android:text="@string/default_zero" android:textSize="14sp"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/imperial_uk_unit" android:text="@string/unit_mpg_uk"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:gravity="center" android:focusable="false" />
    <EditText
        android:id="@+id/imperial_us" android:text="@string/default_zero" android:textSize="14sp"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/imperial_us_unit" android:text="@string/unit_mpg_us"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:gravity="center" android:focusable="false"  />
    <EditText
        android:id="@+id/imperial_simpsons" android:text="@string/default_zero" android:textSize="14sp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"  />
    <TextView
        android:id="@+id/imperial_simpsons_unit" android:text="@string/unit_hogshead_to_rod"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:gravity="center" android:focusable="false" />
</LinearLayout>