<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal" >
    <com.dublet.celicadb2.widgets.EditableTextView android:id="@+id/metric"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:layout_marginRight="8sp"
        android:id="@+id/metric_unit" android:text="@string/unit_litres"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <com.dublet.celicadb2.widgets.EditableTextView android:id="@+id/imperial_uk"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:layout_marginRight="8sp"
        android:id="@+id/imperial_uk_unit" android:text="@string/unit_gallon_uk"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <com.dublet.celicadb2.widgets.EditableTextView android:id="@+id/imperial_us"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:layout_marginRight="8sp"
        android:id="@+id/imperial_us_unit" android:text="@string/unit_gallon_us"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <com.dublet.celicadb2.widgets.EditableTextView android:id="@+id/imperial_simpsons"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/imperial_simpsons_unit" android:text="@string/unit_hogshead"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>