<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurements_header"
              style="?android:attr/textAppearanceLarge"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_columnSpan="2" android:padding="16dp"
              android:textIsSelectable="false" android:text="@string/header_measurements"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_length_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_length"/>
    <com.dublet.celicadb2.widgets.LengthView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_length" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_width_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_width"/>
    <com.dublet.celicadb2.widgets.LengthView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_width" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_height_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_height"/>
    <com.dublet.celicadb2.widgets.LengthView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_height" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_wheel_base_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_wheel_base"/>
    <com.dublet.celicadb2.widgets.LengthView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_wheel_base" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_track_width_front_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_tw_front"/>
    <com.dublet.celicadb2.widgets.LengthView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_track_width_front" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_track_width_rear_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_tw_rear"/>
    <com.dublet.celicadb2.widgets.LengthView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_track_width_rear" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_mass_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_weight"/>
    <com.dublet.celicadb2.widgets.WeightView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_mass" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_fuel_capacity_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/engine_fuel"/>
    <com.dublet.celicadb2.widgets.VolumeView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_fuel_capacity" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_oil_capacity_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_oil_cap"/>
    <com.dublet.celicadb2.widgets.VolumeView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_oil_capacity" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_coolant_capacity_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_coolant_cap"/>
    <com.dublet.celicadb2.widgets.VolumeView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_coolant_capacity" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_drag_coefficient_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_cd"/>
    <com.dublet.celicadb2.widgets.FloatingPointView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_drag_coefficient" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_steering_wheel_rotations_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/measurement_steering_rot"/>
    <com.dublet.celicadb2.widgets.FloatingPointView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_measurement_steering_wheel_rotations" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</GridLayout>