<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android" android:columnCount="2"
                android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_suspension_header"
              style="?android:attr/textAppearanceLarge" android:layout_columnSpan="2"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:padding="16dp" android:textIsSelectable="false" android:text="@string/header_suspension"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_suspension_front_mount_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/suspension_front"/>
    <EditText xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="14sp"
              android:id="@+id/car_detail_suspension_front_mount" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/default_string" android:inputType="text"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_suspension_rear_mount_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/suspension_rear"/>
    <EditText xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="14sp"
              android:id="@+id/car_detail_suspension_rear_mount" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/default_string" android:inputType="text"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_suspension_shock_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/suspension_shock"/>
    <EditText xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="14sp"
              android:id="@+id/car_detail_suspension_shock" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/default_string" android:inputType="text"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/car_detail_suspension_stabilisers_label" android:textIsSelectable="false" android:layout_marginRight="16dp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/suspension_stabilisers"/>
    <EditText xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="14sp"
              android:id="@+id/car_detail_suspension_stabilisers" android:textIsSelectable="true"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/default_string" android:inputType="text"/>
</GridLayout>